GNOME Bugzilla – Bug 749969
Icons too large if the theme doesn't provide the right sizes
Last modified: 2015-08-25 20:20:25 UTC
dosntream report https://bugzilla.redhat.com/show_bug.cgi?id=1224597 Use GTK_ICON_LOOKUP_FORCE_SIZE to retrieve a correct size in nautilus-icon-info.c
->3.16 target and gnome-love bug.
Created attachment 306294 [details] [review] nautilus: ensure nautilus uses a correct size for icons when the theme doesn't provide the right size The icons displayed were too large
Review of attachment 306294 [details] [review]: LGTM
Attachment 306294 [details] pushed as 5f70f01 - nautilus: ensure nautilus uses a correct size for icons when the theme doesn't provide the right size