nautilus: ensure nautilus uses a correct size for icons when the theme doesn't provide the right size

The icons displayed were too large

https://bugzilla.gnome.org/show_bug.cgi?id=749969