libnautilus-private/nautilus-icon-info.c
@@ -379,7 +379,7 @@ nautilus_icon_info_lookup (GIcon *icon,
 
 		icon_theme = gtk_icon_theme_get_default ();
 		gtkicon_info = gtk_icon_theme_choose_icon_for_scale (icon_theme, (const char **)names,
-								     size, scale, 0);
+								     size, scale, GTK_ICON_LOOKUP_FORCE_SIZE);
 
 		if (gtkicon_info == NULL) {
 			return nautilus_icon_info_new_for_pixbuf (NULL, scale);
@@ -416,7 +416,7 @@ nautilus_icon_info_lookup (GIcon *icon,
 									  icon,
 									  size,
 									  scale,
-									  GTK_ICON_LOOKUP_GENERIC_FALLBACK);
+									  GTK_ICON_LOOKUP_FORCE_SIZE);
                 if (gtk_icon_info != NULL) {
                         pixbuf = gtk_icon_info_load_icon (gtk_icon_info, NULL);
                         g_object_unref (gtk_icon_info);
